fix horizontal scroll glitch on mobile devices

--- a/app/styles/header.less
+++ b/app/styles/header.less
@@ -4,6 +4,9 @@
 header{
   .header-bg {
     text-align: center;
+    img{
+      margin-top: -92px;
+    }
   }
   .sky{
     position: absolute;
@@ -16,8 +19,9 @@ header{
   .clouds{
     margin: auto;
     position: relative;
-    width: 960px;
-    height: 111px;
+    width: 100%;
+    overflow: hidden;
+    height: 203px;
     // background: url('../images/header/clouds.png') center center no-repeat;
     .cloud-1,
     .cloud-2,
