--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7279,6 +7279,10 @@ header .header-bg {
   text-align: center;
 }
 
+header .header-bg img {
+  margin-top: -92px;
+}
+
 header .sky {
   position: absolute;
   top: 0;
@@ -7289,9 +7293,10 @@ header .sky {
 
 header .clouds {
   position: relative;
-  width: 960px;
-  height: 111px;
+  width: 100%;
+  height: 203px;
   margin: auto;
+  overflow: hidden;
 }
 
 header .clouds .cloud-1,
@@ -7933,6 +7938,7 @@ blockquote a {
   .sheriff-container img,
   .github-container img {
     position: relative;
+    max-width: 100%;
   }
   .mobile-center {
     text-align: center;
@@ -7954,6 +7960,9 @@ blockquote a {
   aside .row .kid {
     position: relative;
     top: 0;
+  }
+  hr {
+    width: 90%;
   }
   hr.small {
     width: 70%;
